--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:agoraserver.database.windows.net,1433;Initial Catalog=TheAgoraDB;Persist Security Info=False;User ID=NK;Password=p@ssword123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;"
+    "DefaultConnection": "Server=LAPTOP-DRHP09EQ\\SQLEXPRESS;Database=TheAgoraDB;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "AllowedHosts": "*"
 }
